--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,10 @@
 @import "tailwindcss";
 @plugin "daisyui";
-body, html {
+/* body, html {
+    overflow-x: hidden;
+  } */
+  body {
+    margin: 0;
+    padding: 0;
     overflow-x: hidden;
   }
